# IUBH-stream-anomaly

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  sensor-training-data.old  wfetch.bat  wrun.bat  wstreamlit.bat
documentation/: architecture.mermaid  sequence.mermaid
models/: model.joblib
src/app/: main.py
src/dash/: dash_live.py  dashboard.py
src/sim/: sim.py
src/training/: model.joblib  sensor-training-data.csv  train.py
